Refactor predicate list creation using Stream.of and Objects::nonNull
Co-authored-by: Alexander Novash <alexandernovash@gmail.com>